Basic make file Moved rust project to into workspace additional git version tools from k8s community

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,23 +1,8 @@
-name: Docker Image CI
+name: CI
 
-on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-  release:
-    types: [published]
+on: [pull_request, workflow_dispatch]
 
 jobs:
-
-  login:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Login to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKERHUB_USER }}
-          password: ${{ secrets.DOCKERHUB_SECRET }}
 
   build:
     runs-on: ubuntu-latest
@@ -25,25 +10,54 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKERHUB_USER }}
-          password: ${{ secrets.DOCKERHUB_SECRET }}
-      - uses: actions/checkout@v3
-      - name: Build the Docker image
-        run: docker build . --file Dockerfiles/Dockerfile --tag dasher:$(date +%s)
+          username: casibbald
+          password: dckr_pat_vjg7zZgs2h-TgUdJB-ujDzBUxws
+#          username: ${{ secrets.DOCKERHUB_USER }}
+#          password: ${{ secrets.DOCKERHUB_SECRET }}
 
       - name: Check out the repo
         uses: actions/checkout@v3
 
-      - name: Extract metadata (tags, labels) for Docker
-        id: meta
-        uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
-        with:
-          images: microscaler/dasher
+#      - name: Rust lint application
+#        run: make rustlint || true
 
-      - name: Build and push Docker image
-        uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
+      - uses: actions-rs/toolchain@v1
         with:
-          context: Dockerfiles/
-          push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+          toolchain: stable
+
+      - name: Cache cargo modules
+        uses: actions/cache@v3
+        env:
+          cache-name: cache-cargo-modules
+        with:
+          path: ~/.cargo
+          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/cargo.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-build-${{ env.cache-name }}-
+
+      - uses: actions-rs/cargo@v1
+        with:
+          command: clippy
+
+      - uses: subosito/flutter-action@v2
+        with:
+          flutter-version: '3.3.4'
+          channel: 'stable'
+      - run: flutter --version
+
+      - name: Cache flutter modules
+        uses: actions/cache@v3
+        env:
+          cache-name: cache-flutter-modules
+        with:
+          path: ~/.pub-cache
+          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/pubspec.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-build-${{ env.cache-name }}-
+
+      - run: flutter pub get
+      - run: flutter build web || true
+      - run: flutter test || true
+      - uses: actions/checkout@v3
+      - name: Build the Docker image
+        run: docker build . --file Dockerfiles/Dockerfile --tag dasher:$(date +%s)
