--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,22 +9,20 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.5
   flutter_rust_bridge: ^1.49.0
-  freezed: ^2.2.0
+  freezed: ^2.2.1
   freezed_annotation: ^2.2.0
   platform: ^3.1.0
   ffi: ^2.0.1
-  #web_ffi: ^0.7.2
+  web_ffi: ^0.7.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_rust_bridge: ^1.49.0
+  lint: ^1.10.0
   build_runner: ^2.3.2
-  flutter_lints: ^2.0.0
-  ffi: ^2.0.1
-  #web_ffi: ^0.7.2
+  flutter_lints: ^2.0.1
   ffigen: ^6.1.2
 
 flutter:
