--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -9,6 +9,11 @@
 # packages, and plugins designed to encourage good coding practices.
 include: package:flutter_lints/flutter.yaml
 
+# You might want to exclude auto-generated files from dart analysis
+analyzer:
+  exclude:
+  #- '**.freezed.dart'
+
 linter:
   # The lint rules applied to this project can be customized in the
   # section below to disable rules from the `package:flutter_lints/flutter.yaml`
