--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -14,5 +14,9 @@ num = "0.4.0"
 image = "0.24.3"
 crossbeam = "0.8.2"
 
+[build-dependencies]
+clippy = {version = "0.0.302", optional = true}
 
+[features]
+default = []
 
