--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,16 +10,11 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: casibbald
-          password: dckr_pat_vjg7zZgs2h-TgUdJB-ujDzBUxws
-#          username: ${{ secrets.DOCKERHUB_USER }}
-#          password: ${{ secrets.DOCKERHUB_SECRET }}
+          username: ${{ secrets.DOCKERHUB_USER }}
+          password: ${{ secrets.DOCKERHUB_SECRET }}
 
       - name: Check out the repo
         uses: actions/checkout@v3
-
-#      - name: Rust lint application
-#        run: make rustlint || true
 
       - uses: actions-rs/toolchain@v1
         with:
