Updates to fix dynamic generation of ffi bridge generated files for web

--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "dasher",
-    "short_name": "dasher",
+    "name": "with_flutter",
+    "short_name": "with_flutter",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
