--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -1,22 +1,17 @@
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [package]
-name = "rust"
+name = "flutter_rust_bridge_example"
 version = "0.1.0"
-edition = "2021"
+edition = "2018"
 
 [lib]
+name = "flutter_rust_bridge_example"
 crate-type = ["cdylib"]
 
 [dependencies]
 flutter_rust_bridge = "1.49.0"
 anyhow = "1.0.66"
-num = "0.4.0"
-image = "0.24.3"
-crossbeam = "0.8.2"
-
-[build-dependencies]
-clippy = {version = "0.0.302", optional = true}
-
-[features]
-default = []
-
+#anyhow = { workspace = true, features = ["backtrace"] }
+#flutter_rust_bridge = { workspace = true }
+num = "0.4"                                             # unrelated to Flutter Rust Bridge. Used only to draw beautiful photos.
+image = "0.24.3"                                        # unrelated to Flutter Rust Bridge. Used only to draw beautiful photos.
+crossbeam = "0.8"                                       # unrelated to Flutter Rust Bridge. Used only to draw beautiful photos.
