--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,7 +50,7 @@ jobs:
             ${{ runner.os }}-build-${{ env.cache-name }}-
 
       - run: flutter pub get
-      - run: flutter build web || true
+      - run: flutter build web
       - run: flutter test || true
       - uses: actions/checkout@v3
       - name: Build the Docker image
